--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
     <main  class="apresentacao">
         <section class="apresentacao_conteudo">
             <h1 class="apresentacao-cont eudo-titulo">Sobre mim</h1>
-            <p class="apresentacao_conteudo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, repellendus neque. Similique quam dignissimos harum, necessitatibus, magni deserunt accusamus dolorum, placeat suscipit incidunt quia? Beatae illo ducimus nisi distinctio odit.</p class="apresentacao_conteudo">
-            <p>lorem</p>
+            <p class="apresentacao_conteudo">Olá, visitante! Como vai? Espero que muito bem. Meu nome é João Victor. Atualmente, na data de 30/07/2024, tenho 18 anos e estou no segundo semestre de Análise e Desenvolvimento                 de Sistemas (ADS). No momento, estou realizando um estágio no Departamento de Processamento de Dados da Prefeitura Municipal de Itaquaquecetuba. Minhas responsabilidades como estagiário incluem auxiliar e                     resolver problemas na área de helpdesk, como instalação de impressoras, configuração de computadores, montagem de cabeamento de rede, entre outras funções. Futuramente, pretendo me introduzir na área mais                     focada em programação dentro desse departamento.</p class="apresentacao_conteudo">
+            <p>Atualmente, também faço parte do programa ONE - Oracle Next Education, uma parceria entre a Oracle e a Alura, que está me permitindo adquirir um conhecimento mais avançado em linguagens de programação, como                   JavaScript, além de outras linguagens como HTML e CSS. No momento, essas são as únicas linguagens que conheço.</p>
         </section>
         <img src="" alt="">
     </main>
